--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -2,7 +2,7 @@
     <body>
         <header>
             <div class="logo">
-                <img src="../../../assets/img/Spotify_White.png" alt="image">
+                <img src="assets/img/Spotify_White.png" alt="image">
             </div>
         </header>
         
@@ -14,15 +14,15 @@
                             <div class="d-flex flex-column border-icon">
                         
                         <button type="button" class="btn btn-outline-light p-2 rounded-pill mb-3 row d-flex align-items-center">
-                        <img src="../../../assets/img/Google.png" class="g col-3 align-items-center">
+                        <img src="assets/img/Google.png" class="g col-3 align-items-center">
                         <span class="col-9">Continue with Google</span></button>
 
                         <button type="button" class="btn btn-outline-light p-2 rounded-pill mb-3 row d-flex align-items-center">
-                         <img src="../../../assets/img/Facebook.png" class="g col-3 align-items-center"> 
+                         <img src="assets/img/Facebook.png" class="g col-3 align-items-center"> 
                          <span class="col-9">Continue with Facebook</span></button>
                         
                          <button type="button" class="btn btn-outline-light p-2 rounded-pill mb-3 row d-flex align-items-center">
-                         <img src="../../../assets/img/Apple.png" class="g col-3 align-items-center"> 
+                         <img src="assets/img/Apple.png" class="g col-3 align-items-center"> 
                          <span class="col-9">Continue with apple</span></button>
                         
                         <button type="button" class="btn btn-outline-light p-2 rounded-pill mb-3 row d-flex align-items-center">
