--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col-3 pb-4">
             <div class="card p-3 m-1">
-                <div class="spologo"><img src="../../../assets/img/Spotify_White.png" alt="image" class="spo mb-3 p-2"></div>
+                <div class="spologo"><img src="assets/img/Spotify_White.png" alt="image" class="spo mb-3 p-2"></div>
                 <div class="d-flex pb-2">
                     <i class="icon fas fa-home"></i>
                     <p class="playlist">Home</p>
@@ -62,7 +62,7 @@
                     <div class="col-sm-3">
                       <div class="card profile-card">
                         <div class="card-body">
-                          <img src="../../../assets/img/arr.jpg" class="profile" alt="image">
+                          <img src="assets/img/arr.jpg" class="profile" alt="image">
                           <h5 class="pt-3">Ar Rahuman</h5>
                           <p class="artist">Artist</p>
                         </div>
@@ -71,7 +71,7 @@
                     <div class="col-sm-3">
                         <div class="card profile-card">
                           <div class="card-body">
-                            <img src="../../../assets/img/yuvan.jpg" class="profile" alt="image">
+                            <img src="assets/img/yuvan.jpg" class="profile" alt="image">
                             <h5 class="pt-3">Yuvan Shankar Raja</h5>
                             <p class="artist">Artist</p>
                           </div>
@@ -80,7 +80,7 @@
                       <div class="col-sm-3">
                         <div class="card profile-card">
                           <div class="card-body">
-                            <img src="../../../assets/img/harris.jpg" class="profile" alt="image">
+                            <img src="assets/img/harris.jpg" class="profile" alt="image">
                             <h5 class="pt-3">Harris Jeyaraj</h5>
                             <p class="artist">Artist</p>
                           </div>
@@ -89,7 +89,7 @@
                       <div class="col-sm-3">
                         <div class="card profile-card">
                           <div class="card-body">
-                            <img src="../../../assets/img/anirudh.jpg" class="profile" alt="image">
+                            <img src="assets/img/anirudh.jpg" class="profile" alt="image">
                             <h5 class="pt-3">Anirudh Ravichandar</h5>
                             <p class="artist">Artist</p>
                           </div>
